Ajout de la categorie Credit

--- a/videogames.html
+++ b/videogames.html
@@ -43,6 +43,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#deals">Deals</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Credits">Credits</a>
+                  </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0 d-none d-md-block">
                   <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -251,7 +254,23 @@
             </div>
 
             <!-- /Jumbotron here -->
-             
+            <div>
+              <ul>
+                  <li style="border: 1px solid black; background-color: #f1f1f1; color: #333;">Morvan Tanguy</li>
+                  <li style="border: 1px solid black; background-color: #f1f1f1; color: #333;">Ouijdane IMER</li>
+                  <li style="border: 1px solid black; background-color: #f1f1f1; color: #333;">dcabaret</li>
+                  <li style="border: 1px solid black; background-color: #f1f1f1; color: #333;">Axel Villeret</li>
+                  <li style="border: 1px solid black; background-color: #f1f1f1; color: #333;">Maëva Soulard</li>
+                  <li style="border: 1px solid black; background-color: #f1f1f1; color: #333;">Florian-Bauge</li>
+                  <li style="border: 1px solid black; background-color: #f1f1f1; color: #333;">rémi VAILLANT</li>
+                  <li style="border: 1px solid black; background-color: #f1f1f1; color: #333;">David Atsin</li>
+                  <li style="border: 1px solid black; background-color: #f1f1f1; color: #333;">Maria</li>
+                  <li style="border: 1px solid black; background-color: #f1f1f1; color: #333;">Artillio TCHOTCHEU</li>
+                  <li style="border: 1px solid black; background-color: #f1f1f1; color: #333;">Dilane Deffo</li>
+                  <li style="border: 1px solid black; background-color: #f1f1f1; color: #333;">Mohammed</li>
+              </ul>
+          </div>
+          
 
              <!-- Form Modal here -->
              <div class="modal" tabindex="-1" role="dialog" id="register-modal">
